# concoction_rs

./: .gitignore  Cargo.toml  README.md
concoction_macro/: Cargo.toml
concoction_macro/src/: lib.rs
concoction_macro/src/newtype/: from_inner.rs  mod.rs
concoction_test/: Cargo.toml
concoction_test/src/: newtype.rs
